<resources>
    <string name="app_name">Varidetect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="recent_scans">Recent Scans</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="real">Real</string>
    <string name="apr_20_2024">Apr 20, 2024</string>
    <string name="fake">Fake</string>
    <string name="upload_and_scan"><![CDATA[Upload & Scan]]></string>
    <string name="image_video_or_audio">image, video, or \naudio</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="language">Language</string>
    <string name="_0">0</string>
    <string name="sort_by">Sort By:</string>
    <string name="date">Date</string>
    <string name="confidence_score">Confidence Score</string>
    <string name="file_type">File type</string>
    <string name="filter_option">Filter Option</string>
    <string name="date_range">Date Range</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="contact_support">Contact Support</string>
    <string name="faqs">FAQs</string>
    <string name="how_it_works">How it Works</string>
    <string name="about_help"><![CDATA[About & Help]]></string>
    <string name="history">History</string>
    <string name="results">Results</string>
    <string name="explanation">Explanation</string>
    <string name="artifacts_and_inconsistencies_infacial_expressions">Artifacts and inconsistencies\ninfacial expressions.</string>
    <string name="image_tag">*image</string>
    <string name="save_report">Save Report</string>
    <string name="share_report">Share Report</string>
    <string name="processing">Processing....</string>
    <string name="submit">Submit</string>
    <string name="select_language">Select Language</string>
    <string name="verify_reality_with_confidence">Verify Reality with Confidence</string>
    <string name="welcome_to_v_ridetect">Welcome to Vāridetect</string>
    <string name="desc_verify_reality">Detect whether a photo, video, or audio clip is real or manipulated.Vāridetect uses advanced AI to ensure what you see is trustworthy.</string>
    <string name="upload_analyze_instantly"><![CDATA[Upload & Analyze Instantly]]></string>
    <string name="desc_analyze">Simply upload an image, video, or voice recording.Our system runs forensic-level checks to detect signs of editing, deepfakes, or tampering.</string>
    <string name="your_privacy_our_priority">Your Privacy, Our Priority</string>
    <string name="private_secure_trusted">Private. Secure. Trusted.</string>
    <string name="desc_trusted">Your files are analyzed securely and never shared.We respect your privacy — every upload is encrypted and auto-deleted after processing.</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
</resources>