<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".Fragment.History.SortByFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp">
                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/ic_arrow_back"
                    app:tint="@color/black" />
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/backBtn"
                    android:text="@string/sort_by"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_bold"/>
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/sortBY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_below="@id/toolbar">

                <RadioGroup
                    android:id="@+id/sortBYGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confidence_score"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/file_type"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"/>


                </RadioGroup>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/gray"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_below="@id/sortBY">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_option"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_arrow_forward_ios"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_range"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_regular"/>

                <RadioGroup
                    android:id="@+id/fileTypeGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/audio"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"/>


                </RadioGroup>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/gray"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/confidenceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_below="@id/filter"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confidence_score"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_bold"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/startPoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/roboto_regular"/>

                    <SeekBar
                        android:id="@+id/seekPointer"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_centerVertical="true"
                        android:max="100"
                        android:progress="0"
                        android:progressDrawable="@drawable/custom_progress"
                        android:thumb="@drawable/bg_select_thumb"
                        android:layout_toEndOf="@id/startPoint"
                        android:layout_toStartOf="@id/endPoint"/>

                    <TextView
                        android:id="@+id/endPoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/_0"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/roboto_regular"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/gray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_alignParentBottom="true"
                android:weightSum="2">

                <Button
                    android:id="@+id/applyButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_upload_button"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/apply"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_16ssp"
                    android:fontFamily="@font/roboto_bold"/>
                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_upload_button"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_16ssp"
                    android:fontFamily="@font/roboto_bold"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>



</RelativeLayout>