<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/_5sdp"
    tools:context=".Fragment.Home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:scaleType="fitXY"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/purple"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_below="@id/logo"
                android:fontFamily="@font/roboto_bold"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_18ssp"
                />

            <RelativeLayout
                android:id="@+id/uploadBTN"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_45sdp"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/bg_upload_button"
                android:layout_below="@id/title"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:fontFamily="@font/roboto_bold"
                    android:drawablePadding="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:gravity="center_vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:drawableStartCompat="@drawable/upload" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_alignParentBottom="true">


                <TextView
                    android:id="@+id/recentStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_scans"
                    android:textSize="@dimen/_16ssp"
                    android:textFontWeight="1000"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_condensed_regular"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/hours_Status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_below="@id/recentStatus"
                    android:text="@string/_2_hours_ago"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <TextView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_below="@id/recentStatus"
                    android:layout_alignParentEnd="true"
                    android:text="@string/_2_hours_ago"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <View
                    android:id="@+id/viewHour"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_below="@id/hours"
                    android:background="@color/dim_gray"/>

                <TextView
                    android:id="@+id/time_Status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_below="@id/hours_Status"
                    android:text="@string/yesterday"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_below="@id/hours_Status"
                    android:layout_alignParentEnd="true"
                    android:text="@string/real"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <View
                    android:id="@+id/viewDay"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_below="@id/time_Status"
                    android:background="@color/dim_gray"/>

                <TextView
                    android:id="@+id/date_Status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_below="@id/time_Status"
                    android:text="@string/apr_20_2024"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <TextView
                    android:id="@+id/fake_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_below="@id/time_Status"
                    android:layout_alignParentEnd="true"
                    android:text="@string/fake"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <View
                    android:id="@+id/viewDate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_below="@id/date_Status"
                    android:background="@color/dim_gray"/>


            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>




</RelativeLayout>