<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".Activity.OnBoard.OnBoardActivity">

    <FrameLayout
        android:id="@+id/frameOnBoard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layoutBtn"/>


    <RelativeLayout
        android:id="@+id/layoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_skip_btn"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_alignParentStart="true"
            />

        <Button
            android:id="@+id/getStartBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_upload_button"/>

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/roboto_bold"
            android:background="@drawable/bg_next_btn"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>


</RelativeLayout>