<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:padding="@dimen/_10sdp"
    tools:context=".Fragment.Upload.Result.ResultFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="@dimen/_5sdp"
                android:text=""
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                android:layout_centerHorizontal="true"/>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                app:trackThickness="15dp"
                app:trackStopIndicatorSize="10dp"
                app:trackColor="@color/cream_white"
                app:indicatorDirectionLinear="rightToLeft"
                app:trackCornerRadius="10dp"
                app:indicatorColor="@color/purple"
                app:indicatorTrackGapSize="5dp"
                android:layout_below="@id/percentage"/>

            <TextView
                android:id="@+id/titleExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progress"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/explanation"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"/>
            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleExp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/artifacts_and_inconsistencies_infacial_expressions"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/dataCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@id/details"
                app:cardBackgroundColor="@color/purple"
                app:cardCornerRadius="@dimen/_15sdp">

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_3sdp"
                    android:background="@drawable/bg_upload_button"
                    android:text="@string/save_report"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_bold"
                    android:textAllCaps="false"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/shareBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_3sdp"
                    android:background="@drawable/bg_upload_button"
                    android:text="@string/share_report"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_bold"
                    android:textAllCaps="false"
                    android:layout_weight="1"/>

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>