<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/_10sdp"
    tools:context=".Fragment.OnBoard.TrustedFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/your_privacy_our_priority"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"/>

            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/resource_private"/>

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_secure_trusted"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:layout_below="@id/icon"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"/>

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_trusted"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@id/subtitle"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@id/desc">
                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:src="@drawable/bg_unselector_screen"/>

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:src="@drawable/bg_unselector_screen"/>

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:src="@drawable/bg_selector_screen"/>

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>